# wasm-safe-eval

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: __init__.py  test_basic_functionality.py  test_error_handling.py  test_security_filesystem.py  test_security_network.py  test_security_subprocess.py  test_security_system_info.py  test_unit_tests.py
wasm_safe_eval/: __init__.py  _exceptions.py  _paths.py  install_wasmtime.py  safe_eval.py
