[project]
	name = "wasm-safe-eval"
	version = "0.1.0"
	description = "evaluate/execute python code in a safe sandbox using WASM and RustPython "
	readme = "README.md"
	requires-python = ">=3.11"
	dependencies = []
	rustpython-tag = "2025-07-21-main-39"

# see here for latest RustPython releases: https://github.com/RustPython/RustPython/tags
# I previously had issues with getting the latest tag to compile and updating rust fixed this




[dependency-groups]
	dev = [
		"ruff",
		"mypy",
		"pytest",
	]

[build-system]
	requires = ["hatchling"]
	build-backend = "hatchling.build"